# multi_plat_test1120

./: README.md
prj1115/lib/addlib/: CMakeLists.txt
prj1115/lib/addlib/include/: add.h
prj1115/lib/addlib/src/: add.cpp
prj1115/lib/addlib/src/logs/: async_log.txt  basic-log.txt  daily_2023-11-24.txt  multisink.txt  rotating.txt
prj1115/print/: CMakeLists.txt  jzk.txt  main.cpp  preLaunchTask.bat  preLaunchTask.sh  print.code-workspace
prj1115/print/include/: example.h  swap.h
prj1115/print/logs/: async_log.txt  basic-log.txt  daily_2023-11-24.txt  multisink.txt  rotating.txt
prj1115/print/src/: example.cpp  swap.cpp
prj1115/print/src/logs/: async_log.txt  basic-log.txt  daily_2023-11-24.txt  daily_2023-11-25.txt  daily_2023-11-27.txt  multisink.txt  rotating.txt
